fix: Modal z-index.

--- a/src/app.css
+++ b/src/app.css
@@ -44,6 +44,7 @@
 
 .backdrop {
   position: fixed;
+  z-index: 1;
   top: 0;
   bottom: 0;
   right: 0;
@@ -53,6 +54,7 @@
 
 .modal {
   position: fixed;
+  z-index: 2;
   top: 0;
   bottom: 0;
   right: 0;
